[gd_scene load_steps=8 format=3 uid="uid://bimr6vox3j4xt"]

[ext_resource type="Theme" uid="uid://dcf3ucut4uyki" path="res://gui/end_screen/end_screen_theme.tres" id="1_1lmos"]
[ext_resource type="Texture2D" uid="uid://ia0aln3qa5ww" path="res://gui/end_screen/game_over_bg.png" id="2_7pr8t"]
[ext_resource type="Script" path="res://gui/end_screen/lose_screen.gd" id="2_dx6co"]
[ext_resource type="Texture2D" uid="uid://dfetkja7nbol2" path="res://gui/end_screen/game_over_halo.png" id="3_fmc4d"]
[ext_resource type="Texture2D" uid="uid://pe6vh4skjrbx" path="res://gui/end_screen/game_over_title_top.png" id="4_u6cax"]
[ext_resource type="Texture2D" uid="uid://dmig62geveost" path="res://gui/end_screen/game_over_title_bottom.png" id="5_egpnw"]
[ext_resource type="Texture2D" uid="uid://du5olmj3fmpgs" path="res://gui/end_screen/game_over_wings.png" id="6_ekav1"]

[node name="LoseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1lmos")
script = ExtResource("2_dx6co")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7pr8t")
expand_mode = 2

[node name="Halo" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fmc4d")
expand_mode = 2

[node name="TitleTop" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_u6cax")
expand_mode = 2

[node name="TitleBottom" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_egpnw")
expand_mode = 2

[node name="Wings" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ekav1")
expand_mode = 2
